# fair-agent

./: .gitignore  EXPERIMENT_GUIDE.md  README.md  environment.yml  experiments.py  huggingface_auth.py  main.py  pyproject.toml  requirements.txt  run_experiment.sh  simple_demo.py  visualization_demo.py
evaluation_results/: dataset_comparison.json  evaluation_report.json
src/: adversarial_defense.py  bias_fairness.py  datasets.py  evaluation.py  framework.py  langchain_integration.py  llm_wrapper.py  monitoring_logging.py  uncertainty_quantification.py  utils.py  visualization.py
